# libprd

./: .gitignore  CMakeLists.txt  Makefile  README.md  Vagrantfile  init-box.sh  libprd.c  libprd.h  library.c  library.h  rlibprd.h  test-rlib.c  test.c
clibprd/: CMakeLists.txt  libprd.c  libprd.h  test.c
rlibprd/: Cargo.toml  rlibprd.h
rlibprd/rlibprd/: Cargo.toml
rlibprd/rlibprd/src/: lib.rs
rlibprd/src/: email2domain.rs  lib.rs  tests.rs  unbound.rs  validator.rs
