[package]
name = "rlibprd"
version = "0.1.0"
authors = ["Martin Sehnoutka <msehnout@redhat.com>"]
edition = "2018"

[lib]
name = "rlibprd"
crate-type = ["staticlib", "cdylib"] # could be `staticlib` as well

[profile.release]
panic = 'abort'
codegen-units = 1
lto = true
opt-level = 'z'
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
data-encoding = "2.1.2"
openssl-sys = "0.9"
openssl = "0.10"
